hphp/hack/test/typecheck/strict_switch/just_bool.php.new_exhaustivity.exp
WARN: File "just_bool.php", line 33, characters 5-12:
All cases are already covered. Redundant `default` cases prevent detection of future errors. (Warn[12019])
WARN: File "just_bool.php", line 40, characters 3-110:
This switch statement contains redundant cases. There are 1 redundant cases. (Warn[12019])
  File "just_bool.php", line 45, characters 10-14:
  The case is redundant.
WARN: File "just_bool.php", line 45, characters 10-14:
This switch case, `false`, occurred before. It will never be matched. (Warn[12019])
  File "just_bool.php", line 41, characters 10-14:
  This is the original occurrence of the case.
ERROR: File "just_bool.php", line 18, characters 3-76:
This `switch` statement is nonexhaustive. At least the following cases are missing: `true` (Typing[4019])
  File "just_bool.php", line 18, characters 11-12:
  The scrutinee has type `bool`.
ERROR: File "just_bool.php", line 52, characters 3-49:
This `switch` statement is nonexhaustive. At least the following cases are missing: `true` (Typing[4019])
  File "just_bool.php", line 52, characters 11-12:
  The scrutinee has type `bool`.
